# cute-gis

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.7039696  Dockerfile  Doxyfile  README.md  Untitled Diagram.drawio  WMSClass.cpp  camera.cpp  camera.h  citygmlparser.cpp  citygmlparser.h  controller.cpp  controller.h  docker-compose.yml  geojsonloader.cpp  geojsonloader.h  geojsonviewer.cpp  geojsonviewer.h  geotifloader.cpp  geotifloader.h  layer2d.cpp  layer2d.h  layertiff.cpp  layertiff.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectloader.cpp  objectloader.h  renderer.cpp  renderer.h  texturegeotif.cpp  texturegeotif.h  triangle.cpp  triangle.h  wfsdata.cpp  wfsdata.h
.github/workflows/: test.yml
cute-gis/: main.cpp
cute-gis/data/: COURS_D_EAU.shx
data/: lyon.gml  session.json
data/geojson/: eau_nord.geojson  eau_sud.geojson  lyon_nord.geojson  lyon_sample_poly.geojson  lyon_sud.geojson  multipoint__lyonPartDieu__barrier.geojson  multipoint__lyonPartDieu__trafficSignal.geojson  point_lyon2154.geojson  polygon__lyonPartDieu__bridge_intersect.geojson  polygon__lyonPartDieu__building.geojson  polyline__lyonPartDieu__railway.geojson
data/geotiff/: CP.CadastralParcel.tif
data/gml/: SAINT_DIDIER_AU_MONT_D_OR_PYLONE_2015.gfs
data/shapefile/: DEPARTEMENT.dbf  DEPARTEMENT.shx
data/shp/: polygon__lyonPartDieu__building.dbf  polygon__lyonPartDieu__building.shp  polygon__lyonPartDieu__building.shx
docs/: UMLCuteGIS.drawio  uml_CuteGis.drawio
docs/html/: API__WFS_8h_source.html  API__WMS_8h_source.html  API__WMTS_8h_source.html  DataProvider_8h_source.html  abstractdatavisitor_8h_source.html  addFluxData_8h_source.html  annotated.html  boundingbox_8h_source.html  camera_8h_source.html  citygmlfile_8h_source.html  citygmlparser_8h_source.html  classAPI__WFS-members.html  classAPI__WFS.html  classAPI__WFS__inherit__graph.dot  classAPI__WMS-members.html  classAPI__WMS.html  classAPI__WMS__inherit__graph.dot  classAPI__WMTS-members.html  classAPI__WMTS.html  classAPI__WMTS__coll__graph.dot  classAbstractDataVisitor-members.html  classAbstractDataVisitor.html  classAbstractDataVisitor__inherit__graph.dot  classBoundingBox-members.html  classBoundingBox.html  classCamera-members.html  classCamera.html  classCityGMLFIle-members.html  classCityGMLFIle.html  classCityGMLFIle__coll__graph.dot  classCityGMLParser-members.html  classCityGMLParser.html  classCityGMLParser__inherit__graph.dot  classController-members.html  classController.html  classController__inherit__graph.dot  classDataManagment-members.html  classDataManagment.html  classDataManagment__inherit__graph.dot  classDataProvider-members.html  (+162 more)
docs/latex/: API__WFS_8h_source.tex  API__WMS_8h_source.tex  API__WMTS_8h_source.tex  DataProvider_8h_source.tex  abstractdatavisitor_8h_source.tex  addFluxData_8h_source.tex  annotated.tex  boundingbox_8h_source.tex  camera_8h_source.tex  citygmlfile_8h_source.tex  citygmlparser_8h_source.tex  classAPI__WFS.tex  classAPI__WFS.tex.tmp  classAPI__WFS__coll__graph.dot  classAPI__WMS.tex  classAPI__WMS__inherit__graph.dot  classAPI__WMTS.tex  classAPI__WMTS__inherit__graph.dot  classAbstractDataVisitor.tex  classAbstractDataVisitor__inherit__graph.dot  classBoundingBox.tex  classCamera.tex  classCityGMLFIle.tex  classCityGMLFIle__inherit__graph.dot  classCityGMLParser.tex  classCityGMLParser__inherit__graph.dot  classController.tex  classController__inherit__graph.dot  classDataManagment.tex  classDataManagment__inherit__graph.dot  classDataProvider.tex  classDataProvider__inherit__graph.dot  classGeoTiffLoader.tex  classIntersectVisitor.tex  classIntersectVisitor__inherit__graph.dot  classLayer2d.tex  classLayer2d__inherit__graph.dot  classLayerBase.tex  classLayerBase__inherit__graph.dot  classLayerRaster.tex  (+71 more)
html/: annotated.html  camera_8h_source.html  class_camera-members.html  class_camera.html  class_geo_json_viewer-members.html  class_geo_json_viewer.html  class_geo_json_viewer__coll__graph.map  class_geo_json_viewer__coll__graph.md5  class_main_window.html  class_triangle-members.html  class_triangle.html  class_triangle__inherit__graph.map  class_triangle__inherit__graph.md5  classes.html  files.html  functions.html  functions_func.html  geojsonviewer_8h_source.html  hierarchy.html  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  mainwindow_8h_source.html  md__r_e_a_d_m_e.html  pages.html  triangle_8h_source.html
html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
latex/: annotated.tex  class_camera.tex  class_geo_json_viewer.tex  class_geo_json_viewer__inherit__graph.md5  class_main_window.tex  class_triangle.tex  class_triangle__coll__graph.md5  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex
src/: API_WFS.cpp  API_WFS.h  API_WMS.cpp  API_WMS.h  API_WMTS.cpp  DataManagement.h  DataProvider.cpp  DataProvider.h  WMSClass.h  abstractdata.cpp  abstractdata.h  citygmlfile.h  citygmlparser.cpp  examplefile.xml  geojsonfile.cpp  geojsonfile.h  loadgeojson.cpp  loadgeojson.h  main.cpp  main2.cpp  test  vectordata.cpp  vectordata.h  wfsdata.cpp  wfsdata.h
src/back/: API_WFS.cpp  API_WFS.h  API_WMS.cpp  API_WMS.h  API_WMTS.cpp  API_WMTS.h  DataProvider.cpp  DataProvider.h  citygmlparser.cpp  citygmlparser.h  datamanagment.cpp  datamanagment.h  rasterdata.cpp  rasterdata.h  session.cpp  session.h  vectordata.cpp  vectordata.h  wfsdata.cpp  wfsdata.h
src/front/: AttributeTableWindow.cpp  AttributeTableWindow.h  addFluxData.cpp  addFluxData.h  addFluxData.ui  boundingbox.cpp  boundingbox.h  camera.cpp  camera.h  controller.cpp  controller.h  (+23 more)
test_conv_shp2gjson/: CMakeLists.txt  main.cpp
test_data/: CHARLY_EAU_2015.gfs  CHARLY_EAU_2015.gml
tests/: API_WFSTest.cpp  API_WMSTest.cpp  API_WMTSTest.cpp  ExampleClassTest.cpp  api_citygmlparsertest.cpp  gmltest.cpp  loadgeojsonTest.cpp  rasterdataTest.cpp  testAbstractData.cpp  testDataManagment.cpp  wfsdataTest.cpp  wfsdatatest.cpp
(+43 files in other folders)
